<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">app01</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_registration">Registration</string>
    <string name="birth_date">Birth date</string>
    <string name="full_name">Full Name</string>
    <string-array name="City">
        <item >Saint-Petersburg</item>
        <item >Moscow</item>
        <item >Bishkek</item>
    </string-array>
    <string name="city">Native City</string>
    <string name="hobby">Your hobbies</string>
    <string name="hobby1">squash</string>
    <string name="hobby2">dance</string>
    <string name="hobby3">russian poetry</string>
    <string name="hobby4">chess game</string>
    


</resources>